--- a/index.html
+++ b/index.html
@@ -10,6 +10,24 @@
   integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
   crossorigin="anonymous"
 />
+    <script>
+!function(f,b,e,v,n,t,s)
+{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+n.queue=[];t=b.createElement(e);t.async=!0;
+t.src=v;s=b.getElementsByTagName(e)[0];
+s.parentNode.insertBefore(t,s)}(window,document,'script',
+'https://connect.facebook.net/en_US/fbevents.js');
+ 
+fbq('init', '1227328659042093');
+fbq('track', 'PageView');
+</script>
+<noscript>
+<img height="1" width="1"
+src="https://www.facebook.com/tr?id=1227328659042093&ev=PageView
+&noscript=1"/>
+</noscript>
     <title>Капитал плюс - поможем получить кредит для бизнеса</title>
     <meta name="description" content="Мы оказываем консалтинговые услуги в сфере кредитования на развитие 
     бизнеса. Помогаем клиентам в получении кредита как для действующих, так и для начинающих предпринимателей."/>
